[package]
name = "NepPay"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tower = "0.4"
axum = "0.7"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.11.0"
base64 = "0.22.1"
hmac = "0.13.0"
reqwest = { version = "0.13.4", features = ["json", "form"] }
tower-http = { version = "0.5", features = ["cors"] }